--- a/SeleniumUnitTests/packages.config
+++ b/SeleniumUnitTests/packages.config
@@ -2,4 +2,10 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="2.45" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.23.0" targetFramework="net461" />
+  <package id="Selenium.PhantomJS.WebDriver" version="2.1.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.46.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.IEDriver" version="3.141.5" targetFramework="net461" />
 </packages>
